--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev -p 5173",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p 5173"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
